# kv-store

./: .env  Cargo.toml  README.md
migrations/: 20240606134052_init.sql
src/: lib.rs  util.rs
