[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
scylla = "0.12.0"

# shared-types = { git = "https://github.com/mentics-ml-demo/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
