[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytemuck = { version = "1.16.0", features = ["must_cast", "aarch64_simd"] }
scylla = "0.12.0"

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
