[package]
name = "kv-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
# "tls-rustls"

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
